# songparser

./: .dockerignore.yaml  .env.docker.sample  .env.sample  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  go.mod  go.sum  main.go
.gitea/workflows/: tag_release.yml  workflow.yml
src/: api.rs  config.rs  main.rs  queued_item.rs  responses.rs  the_rest.rs  update_queued_song.rs  util.rs
src/auth/: mod.rs
src/metadata/: mod.rs
src/parser/: mod.rs
src/queue/: mod.rs
