[package]
name = "songparser"
version = "0.2.5"
edition = "2024"
rust-version = "1.88"

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
futures = { version = "0.3.31" }
reqwest = { version = "0.12.20", features = ["json", "stream", "multipart"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }
time = { version = "0.3.41", features = ["macros", "serde"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
rand = { version = "0.9.1" }
icarus_meta = { git = "ssh://git@git.kundeng.us/phoenix/icarus_meta.git", tag = "v0.3.0" }
icarus_models = { git = "ssh://git@git.kundeng.us/phoenix/icarus_models.git", tag = "v0.5.5-devel-bd793db08e-111" }
icarus_envy = { git = "ssh://git@git.kundeng.us/phoenix/icarus_envy.git", tag = "v0.3.2-18-d498f60046-006" }
