[package]
name = "songparser"
version = "0.4.10"
edition = "2024"
rust-version = "1.90"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
futures = { version = "0.3.31" }
reqwest = { version = "0.12.23", features = ["json", "stream", "multipart"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145" }
time = { version = "0.3.44", features = ["macros", "serde"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
rand = { version = "0.9.2" }
icarus_meta = { git = "ssh://git@git.kundeng.us/phoenix/icarus_meta.git", tag = "v0.4.3" }
icarus_models = { git = "ssh://git@git.kundeng.us/phoenix/icarus_models.git", tag = "v0.8.3" }
icarus_envy = { git = "ssh://git@git.kundeng.us/phoenix/icarus_envy.git", tag = "v0.5.0" }
